css/style.css
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Source Sans Pro', arial, sans-serif;
}

ul{
   list-style: none; 
}

.site-title{
    position: absolute;
    z-index: 2;
    padding: 6px 0 0 40px;
}

.site-title__anchor{
    text-decoration: none;
    font-size: 34px;
    font-family: 'Alex Brush', cursive;
    color: #fff;
    transition: .3s;
        text-shadow: black 0.1em 0.1em 0.2em;
    cursor: pointer;
}

.site-title__anchor:hover{
    font-size: 45px;
}

.photos__first,
.photos__second,
.photos__third{
    width: 100%;
    min-height: 100vh;
    background-repeat: no-repeat;
    background-position: center center;
    background-size: cover;
}

.photos__first{
    background-image: url(../img/glowna-sala.jpeg);
  
}

.photos__second{
    background-image: url(../img/glowna-sala-bar.jpeg);
}

.photos__third{
    background-image: url(../img/budynek-noc.jpeg);
}

.photos__title{
    position: absolute;
    z-index: 1;
    top: 32%;
    left: 18%;
    font-size: 180px; 
    font-family: 'Alex Brush', cursive;
    color: #fff;
    text-shadow: black 0.1em 0.1em 0.2em;
}

.slick-dots {
    display: flex;
    position: absolute;
    top: 90%;
    left: 50%;
    transform: translateX(-50%);
	justify-content: center;
	
	margin: 0;
	padding: 1rem 0;
	
    list-style-type: none;
}
.slick-dots li {
    margin: 0 0.25rem;
}

.slick-dots li button {
    display: block;
    width: 18px;
    height: 18px;
    padding: 0;
    
    border: 3px solid #fff;
    border-radius: 50%;
    background-color: rgba(255,255,255,0);
    
    text-indent: -9999px;
    cursor: pointer;
}

li.slick-active button {
    background-color: #CF1D16;
}

.photos__arrow{
    position: absolute;
    z-index: 3;
    top: 45%;
    color: #ccc;
    font-size: 50px;
    cursor: pointer;
}

.photos__arrow-left{
    left: 0;
}

.photos__arrow-right{
    right: 0;
}

.menu{ 
    position: fixed;
    z-index: 2;
    top: 0;
    left: 0;
    width: 100vw;  
    max-height: 20%;  
}

.fixed-menu{
    position: fixed;
    z-index: 2;
    width: 100%;
    height: 80px;
    top: 0;
    left: 0;
    background-color: rgba(255,255,255,.9);

    animation: menu .2s linear;
}

.menu__hamburger{
    display: none;
}
.menu__hamburger-inner{
    color: #fff;
}

.menu__list{
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100%;
}

.menu__list li{
    margin-left: 50px;
}

.menu__list-anchor{
    padding: 5px;

    font-size: 30px;
    color: #fff;
    font-weight: bold;
    text-decoration: none;
    text-shadow: black 0.1em 0.1em 0.2em;

    transition: .3s;
}

.menu__list-anchor:hover{
    font-size: 40px;
}

.section__title{
    font-size: 60px;
    color: #333;
}




.wrapper>*{
    position: relative;

    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: center;
}

.who-we-are{
    padding: 110px 0;

    background-color: #F8F9FA;
}

.who-we-are__text{
    padding: 30px 17% 0;

    line-height: 30px;
    font-size: 20px;
    color: #444;
    letter-spacing: 1px;
    text-align: center;
}





.organize{
    padding: 110px 0;
}

.section__second-title{ 
    font-size: 70px;
    font-family: 'Alex Brush', cursive;
    color: #CF1D16;
}

.organize__list{
    width: 100%;

    margin-top: 70px;

    display: flex;
    justify-content: space-evenly;
    flex-wrap: wrap;

    list-style: none;
}

.organize__list>*{
    flex-basis: 30%;
}

.organize__list *{
    text-align: center;
}

.organize__li *{
    margin-top: 30px;
}

.organize__list-title{
    font-size: 30px;
    color: #222;
}

.organize__ceremony,
.organize__funeral,
.organize__saturdays{
    margin-top: 60px;
}





.happy-clients{
    position: relative;

    padding: 110px 0 100px;

    background-color: #F8F9FA;
}

.happy-clients__text{
    padding: 0 8%;
    margin-top: 30px;

    font-size: 25px;
    text-align: center;
    color: #444;   
}

.opinion{
    margin-top: 60px;

    display: none;
    text-align: center;
}

.opinion *{
    margin-top: 10px;
}

.opinion__text{
    padding: 0 8%;

    font-size: 25px; 
}

.opinion__reviewer{
    font-size: 20px;
}

.grade{
    color: #CF1D16;
}

.opinions__arrow{
    position: absolute;
    top: 54%;

    font-size: 150px;
    color: #CF1D16;
    cursor: pointer;
}
.opinions__left-arrow{
    left: 0;
}
.opinions__right-arrow{
    right: 0;
}

article.opinion--active{
    display: block;
    animation: menu 1s linear;
}

.opinions__dots{
    position: absolute;
    top: 90%;
    left: 48%;
}

.opinions__dot{
    width: 12px;
    height: 12px;

    margin-left: 7px;
    border: 2px solid #CF1D16;
    border-radius: 50%;

    background-color: #fff;
    cursor: pointer;
}

.opinions__dot--active{
    background-color: #CF1D16;
}





.galery{
    padding-top: 110px;
}

.galery__img{
    width: 100%;
    height: auto;
}

.galery__photo{
    flex-basis: 45%;
    margin-top: 50px;
}

.galery__photos{
    margin: 30px 0 110px;

    display: flex;
    flex-wrap: wrap;
    justify-content: space-around;
    flex-grow: 1;
}



.contact{
    padding: 110px 0 80px;

    background-color: #F8F9FA;
}

.contact__content{
    width: 100%;

    margin-top: 60px;
    
    display: flex;
    justify-content: space-around;
    align-items: flex-start;
}

.contact__information{

    display: flex;
    flex-direction: column;
    text-align: center;
}

.opening-hours__title{
    margin-bottom: 18px;
}

.opening-hours *,
.reservation__number{
    font-size: 30px;
    margin-top: 5px;
}

.reservation{
    margin-top: 10%;

    font-size: 20px;
   
}

.reservation__title{
    padding: 0 20px;
    margin-bottom: 18px;
}

.reservation__number--main{
    font-weight: bold;
}



footer{
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap;
    background-color: #000;
}

.page-information__icons{
    width: 50%;
    height: 100%;
    display: flex;
    justify-content: flex-start;
    align-items: flex-start;
    flex-wrap: wrap;
}

.page-information *{
    font-size: 10px;
    color: #888;
}
.page-information__author, .page-information__author-name{
    font-size: 10px;
    margin-right: 10px;
}


@keyframes menu{
    from{
        opacity: 0;
    }
    to{
        opacity: 1;
    }
}

@media(max-width:1600px){
    .menu__list{
        justify-content: flex-end;

        padding-right: 3%;
    }
    .menu__list-anchor{
    font-size: 25px;
    }

    .contact__map{
        width: 600px;

        margin-right: 10px;
    }
}


@media(max-width:1250px){
    .slider__title{
        font-size: 140px;
    }
    .site-title__anchor:hover{
        font-size: 34px;
    }
    .menu__hamburger{
        display: inline-block;

        margin-right: 20px;
        border: none;

        background-color: #000;
        cursor: pointer;
        
    }
    .menu__hamburger-inner{
        font-size: 50px;
    }
    .menu{
        max-height: 58px;

        text-align: right;
        background-color: #000;     
    }
    .menu__list{  
        flex-direction: column;

        background-color: #000;
        transition: transform .2s ease-in-out;
        transform: translateY(-700px);
    }
    .menu__list li{
        width: 100%;
        padding: 20px 0;
        border-bottom: 1px solid #fff;

        text-align: center;              
    }
    .menu__list-anchor{
        display: block;
        width: 100%;

        font-size: 30px;       
    }
    .menu__list--active{
        transform: translateY(0);
    }
    .opinions__arrow{    
        top: 65%;

        font-size: 50px;
    }
}


    @media(max-width:1024px){
        .contact__content{
            flex-direction: column;
        }
        .contact__information{
            width: 100%;
        }
        .contact__map{
            width: 85%;

            margin: 50px auto 0;
        }
    }

    @media(max-width:900px){
        .organize__list>*{
            margin-top: 40px;

            flex-basis: 41%;
            
        }
        .organize__ceremony,
        .organize__funeral,
        .organize__saturdays{
        margin-top: 40px;
            }
        .organize__wedding,
        .organize__list-communion{
            margin-top: 0;
        }

        .galery__photo{
            flex-basis: 90%;
        }
    }


    @media(max-width:620px){
        .slider__title{
            font-size: 90px;
        }
    }

    @media(max-width:600px){
        .organize__list>*{
            flex-basis: 51%;
        }
        .organize__wedding,
        .organize__list-communion{
            margin-top: 40px;
        }
        .section__title{
            font-size: 50px;
        }
        .section__second-title{
            font-size: 60px;
        }
        .happy-clients__title{
            font-size: 46px;
        }
        .happy-clients__text{
            font-size: 20px;
        }
        .opinion__text{
            font-size: 20px;
        }

        footer{
            flex-direction: column;
        }
    }

    @media(max-width:500px){
        .site-title__anchor,
        .site-title__anchor:hover{
            font-size: 24px;
        }
        .site-title{
            margin-top: 5px;
        }
        .menu__hamburger-inner{
            padding: 10px 0;

            font-size: 35px;        
        }
        .opening-hours *,
        .reservation *{
            font-size: 20px;
        }
        .opinions__arrow{
            top: 80%;
        }
        .opinions__dots{
            display: none;
        }
    }


    @media(max-width:410px){
        .menu__list-anchor,
        .menu__list-anchor:hover{
            font-size: 16px;
        }
        .happy-clients__title{
            font-size: 30px;
        }

        .happy-clients .section__second-title{
            font-size: 40px;
        }
        .happy-clients__text{
            font-size: 19px;
        }
    }


    @media(max-width:380px){
        .slider__title{
            font-size: 60px;
        }
        .section__title{
            font-size: 40px;
        }
        .section__second-title{
            font-size: 50px;
        }
        .happy-clients__title{
            font-size: 30px;
        }
    }


    @media(max-width:350px){
        .site-title{
            padding: 2px 0 0 10px;
        }
        .opinions__arrow{
            top: 90%;
        }
    }


     @media(max-width:310px){
        .site-title{
            margin-top: -2px;
        }
        .site-title__anchor,
        .site-title__anchor:hover{
            font-size: 18px;
        }
        .menu__hamburger-inner{
            font-size: 23px;
        }
    }

